# corewar-1

./: .datastructs.ME.swp  CMakeLists.txt  arch.ME  datastructs.ME  subject_done_better.ME
src/: check_live_exec.c  environment.h  log.c  loop_manager.h  main.c  moving.c  op.h  operation_processing.c  player_pars.c  process.h  process_init.c  vm_loop.c
